client/src/scss/pages/_storyBoardPage.scss
.create-story-tab {
  overflow: auto;
  background-color: $dark-background-color;

  .create-story-icon {
    float: right;
    cursor: pointer;
    width: 170px;
    padding: 10px;
    height: 50px;
    i {
      color: #917fa9;
    }
    .icon {
      padding: 10px;
    }
  }
}

.story-board-container {
  background-color: #FAF5F5;
  .story-cards {
    height: calc(100vh - 68px);
    li {
      display: inline-block;
    }
  }
  .add-card, .added-card {
    margin: 15px;
    border: 1px dashed;
    text-align: center;
    color: #917fa9;
    .navigation-link {
      height: 100px;
      width: 200px;
    }
    .card {
      color: #917fa9;
      overflow: hidden;
      max-height: 60px;
      word-wrap: break-word;
      word-break: break-word;
      position: relative;
      top: 50%;
      -webkit-transform: translateY(-50%);
      transform: translateY(-50%);
      .icon {
        padding: 10px;
      }
    }
    .delete-icon {
      display: none;
    }
    &:hover {
        .delete-icon {
          display: inline;
          float: right;
          padding-right: 5px;
          padding-top: 2px;
          color: #917fa9;
        }
    }
  }
  .added-card {
    color: $dark-background-color;
    background-color: #ffffff;
    vertical-align: top;
    border: 1px solid;
  }
}

.create-story-tab, .story-board-container {
  a {
    display: block;
    color: #917fa9;
  }
}

.story {
  width: 100%;
  height: 100%;
}

.story-card-title {
  padding: 20px;
  text-align: center;
}

.story-board {
  display: flex;

  .editor-container {
    flex-basis: 0;
    flex-grow: 1;
  }

  .story-title {
    height: 30px;
    color: $secondary-color;
    font-size: larger;
    margin: 5px;
    border: 0;
    width: 70%;
    border-bottom: $primary-color-light 1px solid;
  }

  .story-save {
    font-weight: bold;
    color: $secondary-color;
  }

  .story-editor {
    .ql-snow.ql-toolbar {
      background-color: $dark-background-color;
      text-align: center;
      padding: 15px;
    }

    .quill-contents {
      min-height: 300px;
    }
  }
}

.story-collections .configured-feeds-container, .collection-list-container {
  .expand-icon {
    display: none;
  }
}

